@@ -1,3 +1,14 @@
+2004-06-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/mcs51/gen.c (genCmp): fixed bug #975903
+	* src/hc08/gen.c (operandsEqu),
+	* src/ds390/gen.c (operandsEqu),
+	* src/z80/gen.c (operandsEqu),
+	* src/pic/gen.c (operandsEqu),
+	* src/pic16/gen.c (operandsEqu),
+	* src/mcs51/gen.c (operandsEqu): fixed bug #976283
+	* src/SDCCmain.c (parseCmdLine): report --unknown-option only once
+
 2004-06-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCcse.c (cseBBlock): fixed bug #966963
